--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,40 @@
 plugins {
     id 'com.android.application'
+    id('dev.rikka.tools.refine.gradle-plugin')
 }
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.yxer.rpackagerepository"
+        applicationId "com.yxer.rpack.hook"
         minSdkVersion 27
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 7
+        versionName "1.7.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        resConfigs 'en', 'zh-rCN', 'zh-rTW'
+
+
+    }
+
+    signingConfigs {
+        sign
     }
 
     buildTypes {
+        debug {
+            signingConfig signingConfigs.sign
+        }
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.sign
+            shrinkResources true
+            minifyEnabled true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -30,9 +46,37 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+
+    compileOnly project(':hidden-api')
+    //Import the "Refine" class (Optional, if you don't need the "unsafeCast" method)
+    //Refine.<PackageManagerHidden>unsafeCast(context.getPackageManager())
+    //             .addOnPermissionsChangeListener(new PackageManagerHidden.OnPermissionsChangedListener() {
+    //                 @Override
+    //                 public void onPermissionsChanged(int uid) {
+    //                     // do staff
+    //                 }
+    //             });
+    implementation("dev.rikka.tools.refine:runtime:3.0.3")
+
+
+//    implementation 'androidx.appcompat:appcompat:1.3.1'
+//    implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation("com.google.code.gson:gson:2.8.8")
+
+    compileOnly("de.robv.android.xposed:api:82")
+    compileOnly("de.robv.android.xposed:api:82:sources")
+
+    //https://github.com/KyuubiRan/EzXHelper
+    implementation("com.github.kyuubiran:EzXHelper:0.4.1")
+
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
 }
+
+apply from: rootProject.file('signing.gradle')
